@@ -235,6 +235,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #15359: Add CAN_BCM protocol support to the socket module. Patch by
+  Brian Thorne.
+
 - Issue #16948: Fix quoted printable body encoding for non-latin1 character
   sets in the email package.
 
